deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidisiplin-app-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sidisiplin
  template:
    metadata:
      labels:
        app: sidisiplin
    spec:
      containers:
      - name: sidisiplin-app
        image: 
        ports:
        - containerPort: 8080
