service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidisiplin-app
spec:
  selector:
    app: sidisiplin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
